MODON MRE BPDEV/force-app/main/default/objects/Case_Config_Category__mdt/Case_Config_Category__mdt.object-meta.xml
<CustomObject>
    <description>auto populate fields on case creation</description>
    <label>Case Config Category</label>
    <pluralLabel>Case Config Categories</pluralLabel>
</CustomObject>