MODON MRE BPDEV/force-app/main/default/objects/Case_Config_Category__mdt/fields/AI_Instruction__c.field-meta.xml
<CustomField>
    <fullName>AI_Instruction__c</fullName>
    <label>AI Instruction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>