MODON MRE BPDEV/force-app/main/default/objects/Case_Config_Category__mdt/fields/Queue_Owner_Target_SLA__c.field-meta.xml
<CustomField>
    <fullName>Queue_Owner_Target_SLA__c</fullName>
    <label>Queue Owner Target SLA</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>