MODON MRE BPDEV/force-app/main/default/objects/Case_Config_Category__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>MIRE_Standard</fullName>
            </value>
            <value>
                <fullName>MIRE Standard</fullName>
                <isActive>false</isActive>
                <label>MIRE Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>