MODON MRE BPDEV/force-app/main/default/objects/Case_Config_Category__mdt/fields/Send_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Customer_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if customer to be sent email or not.</description>
    <label>Send Customer Email</label>
    <type>Checkbox</type>
</CustomField>