MODON MRE BPDEV/force-app/main/default/objects/Case_Config_Category__mdt/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <length>128</length>
    <type>Text</type>
</CustomField>