MODON MRE BPDEV/force-app/main/default/objects/Case_Config_Category__mdt/listViews/Organized.listView-meta.xml
<ListView>
    <fullName>Organized</fullName>
    <columns>Organization__c</columns>
    <columns>Department__c</columns>
    <columns>Vertical__c</columns>
    <columns>Sub_Vertical__c</columns>
    <columns>MasterLabel</columns>
    <columns>Sub_Category__c</columns>
    <columns>DeveloperName</columns>
    <columns>Priority__c</columns>
    <columns>TL_Queue__c</columns>
    <columns>Owner_Queue__c</columns>
    <columns>Queue_Owner_Target_SLA__c</columns>
    <filterScope>Everything</filterScope>
    <label>Organized</label>
</ListView>